# cmd-exists

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-linux.yml  rust-windows.yml
src/: lib.rs
