[package]
name = "cmd-exists"
version = "0.1.1"
edition = "2024"

license = "MIT"
repository = "https://github.com/eschwart/cmd-exists"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Determine the existense of a command/program."
keywords = ["command", "program", "exists", "check"]
categories = ["accessibility"]

[profile.release]
lto = true
codegen-units = 1
